tests/NormalTests/paczka1/fuzzy1/90351196.err
Error in line 17: Thq A312 93,9
Error in line 18: Thq S145 59,1
Error in line 34: 8VPz A312 41,02
Error in line 30: A79 A312 67,2
